--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@
   <h1>Welcome to NeuraCue</h1>
   <p>AI-powered geofenced reminders and contextual task cues.</p>
   <p><a href="/privacy.html" style="color: #38bdf8;">Privacy Policy</a></p>
+  <p style="font-size: 0.8em;">© 2025 NeuraCue™. All rights reserved.</p>
 </body>
 </html>
