docs: branding meta, favicon

--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="NeuraCue™ – AI-powered geofenced reminders and contextual productivity." />
+  <meta property="og:title" content="NeuraCue" />
+  <meta property="og:description" content="AI-powered geofenced reminders and contextual productivity." />
+  <meta property="og:image" content="https://neuracue.com/assets/logo.png" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
   <title>NeuraCue</title>
   <style>
     body {
@@ -24,4 +31,7 @@
   <p><a href="/privacy.html" style="color: #38bdf8;">Privacy Policy</a></p>
   <p style="font-size: 0.8em;">© 2025 NeuraCue™. All rights reserved.</p>
 </body>
+<footer style="font-size: 0.8em; margin-top: 3rem; color: #888;">
+  <p>© 2025 NeuraCue™. All rights reserved.</p>
+</footer>
 </html>
