--- a/privacy.html
+++ b/privacy.html
@@ -2,6 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="NeuraCue™ – AI-powered geofenced reminders and contextual productivity." />
+  <meta property="og:title" content="NeuraCue" />
+  <meta property="og:description" content="AI-powered geofenced reminders and contextual productivity." />
+  <meta property="og:image" content="https://neuracue.com/assets/logo.png" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
   <title>Privacy Policy - NeuraCue</title>
 </head>
 <body>
@@ -10,4 +17,7 @@
   <p>Firebase is used for authentication and cloud storage. Data is never shared or sold.</p>
   <p>Questions? Email: <a href="mailto:hello@neuracue.com">hello@neuracue.com</a></p>
 </body>
+<footer style="font-size: 0.8em; margin-top: 3rem; color: #888;">
+  <p>© 2025 NeuraCue™. All rights reserved.</p>
+</footer>
 </html>
