docs: update readme, include sitemap

--- a/index.html
+++ b/index.html
@@ -1,37 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="NeuraCue™ – AI-powered geofenced reminders and contextual productivity." />
-  <meta property="og:title" content="NeuraCue" />
-  <meta property="og:description" content="AI-powered geofenced reminders and contextual productivity." />
-  <meta property="og:image" content="https://neuracue.com/assets/logo.png" />
-  <meta name="twitter:card" content="summary_large_image" />
-  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-  <title>NeuraCue</title>
-  <style>
-    body {
-      font-family: sans-serif;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      min-height: 100vh;
-      background: #0f172a;
-      color: white;
-    }
-    h1 { font-size: 2.5rem; }
-    p { max-width: 600px; text-align: center; }
-  </style>
+    <meta charset="UTF-8">
+    <meta http-equiv="Content-Language" content="en"/>
+    <meta name="author" content="NeuraCue Inc."/>
+    <meta name="description" content="NeuraCue™ – AI-powered geofenced reminders and contextual productivity."/>
+    <meta name="keywords" content="AI reminders, geofencing, productivity, contextual AI, task automation, NeuraCue"/>
+    <meta name="twitter:card" content="summary_large_image"/>
+    <meta name="keywords" content="AI reminders, geofencing, productivity, contextual AI, task automation, NeuraCue"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta property="og:description" content="AI-powered geofenced reminders and contextual productivity."/>
+    <meta property="og:image" content="https://neuracue.com/assets/logo.png"/>
+    <meta property="og:title" content="NeuraCue"/>
+    <link rel="canonical" href="https://neuracue.com/"/>
+    <link rel="icon" type="image/x-icon" href="/favicon.ico"/>
+    <title>NeuraCue</title>
+    <style>
+        body {
+            font-family: sans-serif;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
+            background: #0f172a;
+            color: white;
+        }
+
+        h1 {
+            font-size: 2.5rem;
+        }
+
+        p {
+            max-width: 600px;
+            text-align: center;
+        }
+    </style>
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "Organization",
+            "name": "NeuraCue",
+            "url": "https://neuracue.com",
+            "logo": "https://neuracue.com/assets/logo.png",
+            "sameAs": [],
+            "description": "AI-powered geofenced reminders and contextual productivity."
+        }
+    </script>
 </head>
 <body>
-  <h1>Welcome to NeuraCue</h1>
-  <p>AI-powered geofenced reminders and contextual task cues.</p>
-  <p><a href="/privacy.html" style="color: #38bdf8;">Privacy Policy</a></p>
-  <p style="font-size: 0.8em;">© 2025 NeuraCue™. All rights reserved.</p>
+<main>
+    <h1>Welcome to NeuraCue</h1>
+    <p>AI-powered geofenced reminders and contextual task cues.</p>
+    <p><a href="/privacy.html" style="color: #38bdf8;">Privacy Policy</a></p>
+</main>
 </body>
 <footer style="font-size: 0.8em; margin-top: 3rem; color: #888;">
-  <p>© 2025 NeuraCue™. All rights reserved.</p>
+    <p>© 2025 NeuraCue™. All rights reserved.</p>
 </footer>
 </html>
