--- a/privacy.html
+++ b/privacy.html
@@ -1,23 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="NeuraCue™ – AI-powered geofenced reminders and contextual productivity." />
-  <meta property="og:title" content="NeuraCue" />
-  <meta property="og:description" content="AI-powered geofenced reminders and contextual productivity." />
-  <meta property="og:image" content="https://neuracue.com/assets/logo.png" />
-  <meta name="twitter:card" content="summary_large_image" />
-  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-  <title>Privacy Policy - NeuraCue</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="Content-Language" content="en"/>
+    <meta name="author" content="NeuraCue Inc."/>
+    <meta name="description" content="NeuraCue™ – AI-powered geofenced reminders and contextual productivity."/>
+    <meta name="keywords" content="AI reminders, geofencing, productivity, contextual AI, task automation, NeuraCue"/>
+    <meta name="twitter:card" content="summary_large_image"/>
+    <meta name="keywords" content="AI reminders, geofencing, productivity, contextual AI, task automation, NeuraCue"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta property="og:description" content="AI-powered geofenced reminders and contextual productivity."/>
+    <meta property="og:image" content="https://neuracue.com/assets/logo.png"/>
+    <meta property="og:title" content="NeuraCue"/>
+    <link rel="canonical" href="https://neuracue.com/privacy.html" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico"/>
+    <title>Privacy Policy - NeuraCue</title>
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "WebPage",
+            "name": "Privacy Policy - NeuraCue",
+            "url": "https://neuracue.com/privacy.html",
+            "description": "NeuraCue’s privacy policy detailing data use, collection, and contact information."
+        }
+    </script>
 </head>
 <body>
-  <h1>Privacy Policy</h1>
-  <p>NeuraCue™ does not collect or store personal data beyond what is necessary for app functionality.</p>
-  <p>Firebase is used for authentication and cloud storage. Data is never shared or sold.</p>
-  <p>Questions? Email: <a href="mailto:hello@neuracue.com">hello@neuracue.com</a></p>
+<main>
+    <section>
+        <h2>Data Collection</h2>
+        <p>NeuraCue™ does not collect or store personal data beyond what is necessary for app functionality.</p>
+    </section>
+
+    <section>
+        <h2>Third-Party Services</h2>
+        <p>Firebase is used for authentication and cloud storage. No data is sold or shared.</p>
+    </section>
+
+    <section>
+        <h2>Contact</h2>
+        <p>Questions? Email us at <a href="mailto:hello@neuracue.com">hello@neuracue.com</a></p>
+    </section>
+</main>
 </body>
 <footer style="font-size: 0.8em; margin-top: 3rem; color: #888;">
-  <p>© 2025 NeuraCue™. All rights reserved.</p>
+    <p>© 2025 NeuraCue™. All rights reserved.</p>
 </footer>
 </html>
