--- a/privacy.html
+++ b/privacy.html
@@ -4,17 +4,47 @@
     <meta charset="UTF-8">
     <meta http-equiv="Content-Language" content="en"/>
     <meta name="author" content="NeuraCue Inc."/>
-    <meta name="description" content="NeuraCue™ – AI-powered geofenced reminders and contextual productivity."/>
-    <meta name="keywords" content="AI reminders, geofencing, productivity, contextual AI, task automation, NeuraCue"/>
+    <meta name="description"
+          content="NeuraCue™ – AI-powered geofenced reminders and contextual productivity."/>
+    <meta name="keywords"
+          content="AI reminders, geofencing, productivity, contextual AI, task automation, NeuraCue"/>
     <meta name="twitter:card" content="summary_large_image"/>
-    <meta name="keywords" content="AI reminders, geofencing, productivity, contextual AI, task automation, NeuraCue"/>
+    <meta name="keywords"
+          content="AI reminders, geofencing, productivity, contextual AI, task automation, NeuraCue"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <meta property="og:description" content="AI-powered geofenced reminders and contextual productivity."/>
+    <meta property="og:description"
+          content="AI-powered geofenced reminders and contextual productivity."/>
     <meta property="og:image" content="https://neuracue.com/assets/logo.png"/>
     <meta property="og:title" content="NeuraCue"/>
-    <link rel="canonical" href="https://neuracue.com/privacy.html" />
+    <link rel="canonical" href="https://neuracue.com/privacy.html"/>
     <link rel="icon" type="image/x-icon" href="/favicon.ico"/>
     <title>Privacy Policy - NeuraCue</title>
+    <style>
+        body {
+            font-family: sans-serif;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
+            background: #0f172a;
+            color: white;
+            margin: 0;
+            padding: 0;
+        }
+
+        main {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            text-align: center;
+        }
+
+        p {
+            max-width: 600px;
+            text-align: center;
+        }
+    </style>
     <script type="application/ld+json">
         {
             "@context": "https://schema.org",
@@ -29,12 +59,17 @@
 <main>
     <section>
         <h2>Data Collection</h2>
-        <p>NeuraCue™ does not collect or store personal data beyond what is necessary for app functionality.</p>
+        <p>NeuraCue™ does not collect or store personal data beyond what is necessary for app
+            functionality.</p>
     </section>
 
     <section>
         <h2>Third-Party Services</h2>
-        <p>Firebase is used for authentication and cloud storage. No data is sold or shared.</p>
+        <p>
+            Passwordless via Android Credential Manager API.
+            Cloud storage sync with Firebase.
+            No data is sold or shared.
+        </p>
     </section>
 
     <section>
