--- a/index.html
+++ b/index.html
@@ -40,6 +40,15 @@
         min-height: 100vh;
         background: #0f172a;
         color: white;
+        margin: 0;
+        padding: 0;
+      }
+
+      main {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
       }
 
       h1 {
