--- a/index.html
+++ b/index.html
@@ -40,6 +40,15 @@
         min-height: 100vh;
         background: #0f172a;
         color: white;
+        margin: 0;
+        padding: 0;
+      }
+
+      main {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
       }
 
       h1 {
@@ -77,7 +86,7 @@
           border-radius: 16px;
         "
       />
-      <p>AI-powered geofenced reminders for Android. App coming soon.</p>
+      <p>AI-powered geo-fenced reminders for Android on Google Play Store.</p>
       <p style="font-size: 0.9rem; color: #cbd5e1">
         This site hosts required policy and compliance pages for the NeuraCue
         Android app on Google Play.
