--- a/privacy.html
+++ b/privacy.html
@@ -15,6 +15,36 @@
     <link rel="canonical" href="https://neuracue.com/privacy.html" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico"/>
     <title>Privacy Policy - NeuraCue</title>
+    <style>
+        body {
+            font-family: sans-serif;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
+            background: #0f172a;
+            color: white;
+            margin: 0;
+            padding: 0;
+        }
+
+        main {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            text-align: center;
+        }
+
+        h1 {
+            font-size: 2.5rem;
+        }
+
+        p {
+            max-width: 600px;
+            text-align: center;
+        }
+    </style>
     <script type="application/ld+json">
         {
             "@context": "https://schema.org",
