style privacy page
remove h1 style pn privacy page

update site pages

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           border-radius: 16px;
         "
       />
-      <p>AI-powered geofenced reminders for Android. App coming soon.</p>
+      <p>AI-powered geo-fenced reminders for Android on Google Play Store.</p>
       <p style="font-size: 0.9rem; color: #cbd5e1">
         This site hosts required policy and compliance pages for the NeuraCue
         Android app on Google Play.
